tests/instantiating/access_invalid_value/stderr.golden
error: access property must be "Read Write", "Read Only" or "Write Only", current value "Foo"
bus.fbd +2:22
   |
 2 |   M memory; access = "Foo"
   |                      ^^^^^
